--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.63.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^11.16.2",
+    "konva": "^9.3.18",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-konva": "^18.0.2",
     "react-router-dom": "^7.1.1",
     "react-to-print": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/draft-js": "^0.11.18",
     "@types/react": "^18.3.18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
