--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "dependencies": {
     "@tanstack/react-query": "^5.63.0",
     "draft-js": "^0.11.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.16.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "konva": "^9.3.18",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-konva": "^18.0.2",
+    "react-konva-utils": "^1.0.7",
     "react-router-dom": "^7.1.1",
     "react-to-print": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/draft-js": "^0.11.18",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.5",
