--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@tanstack/react-query": "^5.63.0",
     "draft-js": "^0.11.7",
     "file-saver": "^2.0.5",
