--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@tanstack/react-query": "^5.63.0",
+    "@vercel/speed-insights": "^1.1.0",
     "draft-js": "^0.11.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.16.2",
